# GenesisPlatform

./: .env.example  .gitattributes  .gitignore  Genesis Pipeline Run Checklist.docx  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/app/: distance_matrix.py  main.py
apps/api/app/routes/: api_loaders.py  booking_api.py  openrouteservice_wrapper.py  router.py
apps/api/app/services/: compute_distance.py  distance_matrix.py  driver_matching.py
apps/worker/: Dockerfile  entrypoint.sh
data/: README.md
data/raw/co/: colombia-latest.osm.pbf
docs/: 1_Docker and Git Setup_README.md  2_Data Pipeline Architecture_README.md  3_Driver Registration and Mock Trip Logs.md  4_Booking API.md  README.md  api_spec.md  architecture.md  index.md  kpis.md
infra/: README.md
pipelines/: co_preprocess.py  cr_preprocess.py  etl_base.py  mx_preprocess.py  process_helper.py
scripts/: create_mock_trip_logs.py  driver_seed_generator.py  gen_synthetic_trips.py  run_etl.py  sample_driver_generator.py  seed_db.py  trip_seed_generator.py
