[tool.poetry]
name = "genesis-platform"
version = "0.1.0"
description = "Community-based freight & moving logistics platform"
authors = ["Living Stones Foundation"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pandas = "^2.2.2"
geopandas = "^0.14.4"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
